# FinTech-BAAS

platform/backend/: .env.example  README.md  alembic.ini  pyproject.toml  ruff.toml
platform/backend/apps/: __init__.py
platform/backend/apps/ai_agents/: __init__.py  ai_router_engine.py  ai_runtime_governor.py  copilot_context.py  embedding_service.py  gemini_client.py  knowledge_ingest.py  orchestrator.py  rag_engine.py  router.py
platform/backend/apps/approvals/: __init__.py  router.py
platform/backend/apps/audit/: __init__.py  router.py
platform/backend/apps/auth/: __init__.py  router.py
platform/backend/apps/bff/: __init__.py  router.py
platform/backend/apps/cases/: __init__.py  router.py
platform/backend/apps/collections/: __init__.py  categorization.py  collections_ai.py  router.py
platform/backend/apps/document_ai/: __init__.py  ingestion.py  router.py  service.py
platform/backend/apps/gateway/: __init__.py  error_handlers.py  main.py  middleware.py
platform/backend/apps/kyc/: __init__.py  liveness.py  router.py
platform/backend/apps/ledger/: __init__.py  forecasting.py  forecasting_router.py  router.py  service.py
platform/backend/apps/notifications/: __init__.py  orchestrator.py  router.py
platform/backend/apps/payouts/: __init__.py  name_matching.py  router.py  service.py  smart_routing.py
platform/backend/apps/policy/: __init__.py  router.py
platform/backend/apps/realtime/: __init__.py  router.py
platform/backend/apps/recon/: __init__.py  recon_ai.py  router.py
platform/backend/apps/risk/: __init__.py  circuit_breaker.py  explainable.py  features.py  router.py
platform/backend/apps/webhooks/: __init__.py  router.py
platform/backend/tests/: test_ai_agents_router.py  test_events.py  test_kyb_service.py  test_ledger.py  test_observability_setup.py  test_payout_states.py  test_security.py
(+56 files in other folders)
